--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
 <title>AirBnB Clone</title>
 </head>
 
