--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="styles/4-common.css">
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
-	<link rel="stylesheet" href="styles/4-filters.css">
+	<link rel="stylesheet" href="styles/5-filters.css">
 </head>
 
 <body>
@@ -17,6 +17,14 @@
 	<main>
 		<div class="container">
 			<section class="filters">
+				 <div class="locations">
+				<h3>States</h3>
+			<h4> Kavango West Region, Namibia </h4>
+		  </div>
+		  <div class="amenities">
+			<h3>Amenities</h3>
+			<h4> Fitnesss Facilities, Parks... </h4>
+		  </div>
 				<button>Search</button>
 			</section>
 		</di>
