--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -19,7 +19,7 @@
 			<section class="filters">
 				 <div class="locations">
 				<h3>States</h3>
-			<h4> Kavango West Region, Namibia </h4>
+			<h4> Kavango West Region, Khomas </h4>
 		  </div>
 		  <div class="amenities">
 			<h3>Amenities</h3>
