--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -23,7 +23,7 @@
 		  </div>
 		  <div class="amenities">
 			<h3>Amenities</h3>
-			<h4> Fitnesss Facilities, Parks... </h4>
+			<h4> Fitnesss Facilities, Bars... </h4>
 		  </div>
 				<button>Search</button>
 			</section>
